IoC counts endpoint DTO improved, swagger doc
