# ejb/src/main/java/io/whalebone/publicapi/ejb/dto/ActiveIoCStatsDTO.java
@@ -3,11 +3,11 @@ package io.whalebone.publicapi.ejb.dto;
 import lombok.Getter;
 import lombok.Setter;
 
-import java.util.Map;
+import java.util.List;
 
 @Getter
 @Setter
 public class ActiveIoCStatsDTO {
     private long totalCount;
-    private Map<EThreatType, Long> countsPerTypeMap;
+    private List<ThreatTypeCountDTO> threatTypeCounts;
 }
