# ejb/src/main/java/io/whalebone/publicapi/ejb/dto/ThreatTypeCountDTO.java
@@ -1,0 +1,11 @@
+package io.whalebone.publicapi.ejb.dto;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class ThreatTypeCountDTO {
+    private EThreatType threatType;
+    private long count;
+}
